--- a/views/profile1.ejs
+++ b/views/profile1.ejs
@@ -335,7 +335,7 @@
 						</thead>
 						<tbody id="ongoing_trades"></tbody>
 					</table>
-					<form id="myform" action="/resumetrade1" method="post" enctype = "application/x-www-form-urlencoded">
+					<form id="myform" action="/resumetrade" method="post" enctype = "application/x-www-form-urlencoded">
 						<input type="hidden" id="trade_id" name="trade_id"></input>
 						<input type="hidden" id="senderpage" name="senderpage" value="<%= role %>"></input>
 						<input type="hidden" name="username" value="<%= username %>"></input>
@@ -361,6 +361,7 @@
 				<form>
 					<input type="hidden" id="manufacturer_id" name="manufacturer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
+					<input type="hidden" id="tradetype" name="tradetype" value="PARTSSUPPLIERTOOEM"></input>
 					<input type="text" class="form-control" id="supplier_id" name="supplier_id" placeholder="Supplier User Name"></input>
 					<span class="fa fa-user icon"></span><br>
 					<input type="text" class="form-control" id="bank_id" name="bank_id" placeholder="Bank User Name"></input>
@@ -401,11 +402,12 @@
 		var xhttp = new XMLHttpRequest();
 		var user = encodeURIComponent(document.getElementById("user").value);
 		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
+		var tradeType = encodeURIComponent(document.getElementById("tradetype").value);
 		var supplier_id = encodeURIComponent(document.getElementById("supplier_id").value);
 		var manufacturer_id = encodeURIComponent(document.getElementById("manufacturer_id").value);
 		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
 		var shipper_id = encodeURIComponent(document.getElementById("shipper_id").value);
-		var parameters = "bank_id=" + bank_id + "&user=" + user + "&senderpage=" + senderpage + "&supplier_id=" + supplier_id + "&manufacturer_id=" + manufacturer_id + "&bank_id=" + bank_id + "&shipper_id=" + shipper_id;
+		var parameters = "bank_id=" + bank_id + "&user=" + user + "&tradeType=" + tradeType +"&senderpage=" + senderpage + "&supplier_id=" + supplier_id + "&manufacturer_id=" + manufacturer_id + "&bank_id=" + bank_id + "&shipper_id=" + shipper_id;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
@@ -423,7 +425,7 @@
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
 						thead.innerHTML = '<tr><th>Tracking ID</th><th>Manufacturer</th><th>Supplier</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.manufacturer_id + "</td><td>" + res.supplier_id + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
-						tradefun2(res.tradeID, res.manufacturerHash, res.supplierHash, res.bankHash, res.shipperHash);
+						tradefun2(res.tradeID, res.tradeType, res.manufacturerHash, res.supplierHash, res.bankHash, res.shipperHash);
 					}
 				}
 			}
@@ -433,9 +435,9 @@
 		xhttp.send(parameters);
 	}
 
-	function tradefun2(tradeID, manufacturerHash, supplierHash, bankHash, shipperHash){
+	function tradefun2(tradeID, tradetype, manufacturerHash, supplierHash, bankHash, shipperHash){
 		var xhttp = new XMLHttpRequest();
-		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&supplierHash=" + encodeURIComponent(supplierHash) + "&bankHash=" + encodeURIComponent(bankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
+		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradeType=" + encodeURIComponent(tradetype) + "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&supplierHash=" + encodeURIComponent(supplierHash) + "&bankHash=" + encodeURIComponent(bankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				location.reload();
