--- a/views/profile1.ejs
+++ b/views/profile1.ejs
@@ -407,7 +407,7 @@
 		var manufacturer_id = encodeURIComponent(document.getElementById("manufacturer_id").value);
 		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
 		var shipper_id = encodeURIComponent(document.getElementById("shipper_id").value);
-		var parameters = "bank_id=" + bank_id + "&user=" + user + "&tradeType=" + tradeType +"&senderpage=" + senderpage + "&supplier_id=" + supplier_id + "&manufacturer_id=" + manufacturer_id + "&bank_id=" + bank_id + "&shipper_id=" + shipper_id;
+		var parameters = "bank_id=" + bank_id + "&user=" + user + "&tradeType=" + tradeType +"&senderpage=" + senderpage + "&supplier_id=" + supplier_id + "&manufacturer_id=" + manufacturer_id + "&shipper_id=" + shipper_id;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
