--- a/views/profile1.ejs
+++ b/views/profile1.ejs
@@ -402,12 +402,12 @@
 		var xhttp = new XMLHttpRequest();
 		var user = encodeURIComponent(document.getElementById("user").value);
 		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
-		var tradeType = encodeURIComponent(document.getElementById("tradetype").value);
+		var tradetype = encodeURIComponent(document.getElementById("tradetype").value);
 		var supplier_id = encodeURIComponent(document.getElementById("supplier_id").value);
 		var manufacturer_id = encodeURIComponent(document.getElementById("manufacturer_id").value);
 		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
 		var shipper_id = encodeURIComponent(document.getElementById("shipper_id").value);
-		var parameters = "bank_id=" + bank_id + "&user=" + user + "&tradeType=" + tradeType +"&senderpage=" + senderpage + "&supplier_id=" + supplier_id + "&manufacturer_id=" + manufacturer_id + "&shipper_id=" + shipper_id;
+		var parameters = "bank_id=" + bank_id + "&user=" + user + "&tradetype=" + tradetype +"&senderpage=" + senderpage + "&supplier_id=" + supplier_id + "&manufacturer_id=" + manufacturer_id + "&shipper_id=" + shipper_id;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
@@ -425,7 +425,7 @@
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
 						thead.innerHTML = '<tr><th>Tracking ID</th><th>Manufacturer</th><th>Supplier</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.manufacturer_id + "</td><td>" + res.supplier_id + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
-						tradefun2(res.tradeID, res.tradeType, res.manufacturerHash, res.supplierHash, res.bankHash, res.shipperHash);
+						tradefun2(res.tradeID, res.tradetype, res.manufacturerHash, res.supplierHash, res.bankHash, res.shipperHash);
 					}
 				}
 			}
@@ -437,7 +437,7 @@
 
 	function tradefun2(tradeID, tradetype, manufacturerHash, supplierHash, bankHash, shipperHash){
 		var xhttp = new XMLHttpRequest();
-		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradeType=" + encodeURIComponent(tradetype) + "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&supplierHash=" + encodeURIComponent(supplierHash) + "&bankHash=" + encodeURIComponent(bankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
+		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradetype=" + encodeURIComponent(tradetype) + "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&supplierHash=" + encodeURIComponent(supplierHash) + "&bankHash=" + encodeURIComponent(bankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				location.reload();
