--- a/views/customerlogin.ejs
+++ b/views/customerlogin.ejs
@@ -100,7 +100,7 @@
     <h1 class="loginh1">Login</h1>
     <!-- LOGIN FORM -->
     <div class="loginnext">
-    <form action="/login" method="post" id="loginform">
+    <form action="/customerlogin" method="post" id="loginform">
         <div class="alert alert-danger loginerror">Please enter proper aadhar number</div>
         <div class="alert alert-danger loginerror3">Customer with this Aadhar number does not exist!</div>
         <h5 class="loginh5">Verify your Aadhar number</h5>
