--- a/views/profile3.ejs
+++ b/views/profile3.ejs
@@ -366,6 +366,8 @@
 					<span class="fa fa-user icon"></span><br>
 					<input type="text" class="form-control" id="customermobile" name="customermobile" placeholder="Customer Mobile Number"></input>
 					<span class="fa fa-truck icon"></span><br>
+					<input type="text" class="form-control" id="insurer_id" name="insurer_id" placeholder="Insurer User Name"></input>
+					<span class="fa fa-truck icon"></span><br>
 					<button type="submit" class="btn btn-warning btn-lg loginbtn">Trigger trade</button>
 				</form>
 				<!--<button class="btn btn-warning btn-lg trbtn" data-toggle="modal" data-target="#triggermodal" onclick="tradefun()">Trigger trade</button>-->
