--- a/views/profile3.ejs
+++ b/views/profile3.ejs
@@ -249,6 +249,10 @@
 			position:relative;
 			left:66%;
 		}
+		.setbutton{
+		   position:relative;
+			left:75%;
+		 }
 		.modal-header {
 
 			padding: 15px;
@@ -297,6 +301,21 @@
 			margin-right:5px;
 
 		}
+		.show_error{
+		   color:red;
+		   font-size:12px;
+		   display:none;
+		}
+		.mobile_error{
+		   color:red;
+		   font-size:12px;
+		   display:none;
+		}
+		.fa-check-square-o{
+		  color:green;
+		  font-size:20px;
+		}
+
 
 
 
@@ -358,19 +377,25 @@
 			</div>
 			<div class="well" id="triggertradeform"  style="display:none">
 				<h3> Start new trade </h3>
-				<form action="/triggertradenew" method="post" enctype = "multipart/form-data" >
+				<form onsubmit="return validation()" action="/triggertradenew" method="post" enctype = "multipart/form-data" >
 					<input type="hidden" id="dealer_id" name="dealer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
 					<input type="hidden" name="tradetype" value="DEALERTOCUSTOMER"></input>
-					<input type="text" class="form-control" id="customeraadhar_id" name="customeraadhar_id" placeholder="Customer Aadhar Number"></input>
-					<span class="fa fa-user icon"></span><br>
-					<input type="text" class="form-control" id="customermobile" name="customermobile" placeholder="Customer Mobile Number"></input>
-					<span class="fa fa-truck icon"></span><br>
-					<input type="text" class="form-control" id="insurer_id" name="insurer_id" placeholder="Insurer User Name"></input>
-					<span class="fa fa-truck icon"></span><br>
-					<button type="submit" class="btn btn-warning btn-lg loginbtn">Trigger trade</button>
+					<input type="hidden" id="senderpage" name="senderpage" value="Bank"></input>
+					<span class="show_error">Please Enter your Correct Aadhar Number </span>
+					<input type="text" class="form-control" id="aadhar_id" name="aadhar"  placeholder="Enter Aadhar no."required></input>
+					<span class="fa fa-id-card icon"></span><br>
+					<span class="mobile_error">Please Enter your Correct Mobile Number </span>
+					<input type="text" class="form-control" id="number_id" name="mobile" placeholder="Enter Phone no." required></input>
+					<span class="fa fa-phone icon"></span><br>
+					<input type="text" class="form-control" id="insurer_id" name="insurer_id"  placeholder="Insurer Name"required></input>
 				</form>
-				<!--<button class="btn btn-warning btn-lg trbtn" data-toggle="modal" data-target="#triggermodal" onclick="tradefun()">Trigger trade</button>-->
+				     <button type="submit" class="btn btn-warning btn-lg trbtn" id="trigger_trade" data-toggle="modal" data-target="#">Trigger trade</button>
+				    <div class="upload_kyc" style="display:none;">
+						<p><i class="fa fa-check-square-o" aria-hidden="true"></i> KYC Done</p>
+						<p><i class="fa fa-check-square-o" aria-hidden="true"></i> KYC Not Verified</p>
+						<a href="http://localhost:63342/bigstylist/views/tradepage.html?_ijt=4kj0o0adc84bucjsoe87rcplq6"><button class="btn btn-warning btn-lg trbtn setbutton" data-toggle="modal" data-target="#">Proceed</button></a>
+					</div>
 			</div>
 		</div>
 	</div>
@@ -399,6 +424,33 @@
 <script type="text/javascript" src="/js/jquery.1.11.1.js"></script>
 <script type="text/javascript" src="/js/bootstrap.js"></script>
 <script>
+$(document).ready(function(){
+    $("#trigger_trade").click(function(){
+       var adharno = $("#aadhar_id").val();
+       var mobileno = $("#number_id").val();
+       if (adharno  == '' || adharno.length != 12 || isNaN(adharno) ){
+         $(".show_error").show();
+         return false;
+       }
+       else if (mobileno  == '' || mobileno.length != 10 || isNaN(mobileno)){
+         $(".mobile_error").show();
+         return false;
+       }
+       else{
+       $(".upload_kyc").show();
+       $("#trigger_trade").hide();
+       $(".show_error").hide();
+       $(".mobile_error").hide();
+       return true;
+       }
+    });
+
+});
+
+
+
+
+
 	function tradefun() {
 		var xhttp = new XMLHttpRequest();
 		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
@@ -423,7 +475,7 @@
 					timestamp = new Date( parseInt( timestamp, 16 ) * 1000 ).toString();
 					var indx = timestamp.indexOf('GMT');
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
-						thead.innerHTML = '<tr><th>Tracking ID</th><th>customer</th><th>customer</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
+						thead.innerHTML = '<tr><th>Tracking ID</th><th>Buyer</th><th>Seller</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.buyer + "</td><td>" + res.seller + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
 						tradefun2(res.tradeID, res.buyerHash, res.sellerHash, res.buyerBankHash, res.sellerBankHash, res.shipperHash);
 					}
@@ -466,7 +518,7 @@
 	var v = "<%=trade_id%>";
 	var tradeList = v.split(',');
 	var customerList = "<%=customerList%>".split(',');
-	var customerList = "<%=customerList%>".split(',');
+	var dealerList = "<%=dealerList%>".split(',');
 	var statusList = "<%=statusList%>".split(',');
 	for (i = 0; i < tradeList.length; ++i) {
 		if(tradeList[0]=="No Trades Yet")
@@ -479,12 +531,12 @@
 		timestamp = new Date( parseInt( timestamp, 16 ) * 1000 ).toString();
 		var indx = timestamp.indexOf('GMT');
 		if(statusList[i] == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
-			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + customerList[i] + "</td><td>" + customerList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" style="display:none" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr>';
+			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + customerList[i] + "</td><td>" + dealerList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" style="display:none" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr>';
 		}
 		else{
-			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + customerList[i] + "</td><td>" + customerList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" class="loaderbtngif"></td></tr>';
+			tr += '<td style="display:none;">' + tradeList[i] + '</td><td class="trackId">' + tradeList[i].slice(0,3) + '...' +  tradeList[i].slice(20,24) + "</td><td>" + customerList[i] + "</td><td>" + dealerList[i] + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+tradeList[i]+' class="viewbtn" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg">View</button><img src="/images/loader.gif" class="loaderbtngif"></td></tr>';
 		}
-		thead.innerHTML = '<tr><th>Tracking ID</th><th>customer</th><th>customer</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
+		thead.innerHTML = '<tr><th>Tracking ID</th><th>Buyer</th><th>Seller</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 		tbody.innerHTML = tr + tbody.innerHTML;
 	}
 
