--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -361,14 +361,13 @@
 				<form action="/triggertradenew" method="post" enctype = "multipart/form-data" >
 					<input type="hidden" id="dealer_id" name="dealer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
-					<input type="hidden" name="tradetype" value="OEMTODEALER"></input>
+					<input type="hidden" id="tradetype" name="tradetype" value="OEMTODEALER"></input>
 					<input type="text" class="form-control" id="manufacturer_id" name="manufacturer_id" placeholder="Manufacturer User Name"></input>
 					<span class="fa fa-user icon"></span><br>
 					<input type="text" class="form-control" id="shipper_id" name="shipper_id" placeholder="Shipper User Name"></input>
 					<span class="fa fa-truck icon"></span><br>
-					<button type="submit" class="btn btn-warning btn-lg loginbtn">Trigger trade</button>
 				</form>
-				<!--<button class="btn btn-warning btn-lg trbtn" data-toggle="modal" data-target="#triggermodal" onclick="tradefun()">Trigger trade</button>-->
+				<button class="btn btn-warning btn-lg trbtn" data-toggle="modal" data-target="#triggermodal" onclick="tradefun()">Trigger trade</button>
 			</div>
 		</div>
 	</div>
@@ -399,13 +398,14 @@
 <script>
 	function tradefun() {
 		var xhttp = new XMLHttpRequest();
+		console.log(document.getElementById("tradetype").value);
 		var user = encodeURIComponent(document.getElementById("user").value);
 		var tradetype = encodeURIComponent(document.getElementById("tradetype").value);
 		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
 		var dealer_id = encodeURIComponent(document.getElementById("dealer_id").value);
 		var manufacturer_id = encodeURIComponent(document.getElementById("manufacturer_id").value);
 		var shipper_id = encodeURIComponent(document.getElementById("shipper_id").value);
-		var parameters = "user=" + user + "&senderpage=" + senderpage +  "&tradeType=" + tradetype + "&dealer_id=" + dealer_id + "&manufacturer_id=" + manufacturer_id + "&shipper_id=" + shipper_id;
+		var parameters = "user=" + user + "&senderpage=" + senderpage +  "&tradetype=" + tradetype + "&dealer_id=" + dealer_id + "&manufacturer_id=" + manufacturer_id + "&shipper_id=" + shipper_id;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
@@ -422,7 +422,7 @@
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
 						thead.innerHTML = '<tr><th>Tracking ID</th><th>Dealer</th><th>Manufacturer</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.buyer + "</td><td>" + res.seller + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
-						tradefun2(res.tradeID, res.tradeType, res.dealerHash, res.manufacturerHash, res.shipperHash);
+						tradefun2(res.tradeID, res.tradetype, res.dealerHash, res.manufacturerHash, res.shipperHash);
 					}
 				}
 			}
@@ -434,7 +434,7 @@
 
 	function tradefun2(tradeID, tradeType, dealerHash, manufacturerHash, shipperHash){
 		var xhttp = new XMLHttpRequest();
-		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradeType=" + encodeURIComponent(tradeType) + "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&dealerHash=" + encodeURIComponent(dealerHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
+		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradetype=" + encodeURIComponent(tradeType) + "&manufacturerHash=" + encodeURIComponent(manufacturerHash) + "&dealerHash=" + encodeURIComponent(dealerHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				location.reload();
