--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,6 @@
             background-size:cover;
             height:100%;
             width:100%;
-            position:fixed;
         }
         @font-face{
 
@@ -191,6 +190,11 @@
                         <input type="radio" name="role" value="Shipper" id="Shipper" />
                         <label for="Shipper"><span class="fa fa-shopping-cart rimg"></span></label>
                         <p class="rcont">Shipper</p>
+                    </div>
+                    <div class="rdbx">
+                        <input type="radio" name="role" value="insurer" id="Insurer" />
+                        <label for="Insurer"><span class="fa fa-shield rimg"></span></label>
+                        <p class="rcont">Insurer</p>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-warning btn-lg loginbtn">Signup</button>
