--- a/views/profile3.ejs
+++ b/views/profile3.ejs
@@ -377,7 +377,7 @@
 			</div>
 			<div class="well" id="triggertradeform"  style="display:none">
 				<h3> Start new trade </h3>
-				<form id="trigger" action="/triggertradenew" method="post" enctype = "multipart/form-data" >
+				<form id="trigger">
 					<input type="hidden" id="dealer_id" name="dealer_id" value=<%= username %>></input>
 					<input type="hidden" id="user" name="user" value=<%= user %>></input>
 					<input type="hidden" name="tradetype" value="DEALERTOCUSTOMER"></input>
@@ -390,13 +390,13 @@
 					<span class="fa fa-phone icon"></span><br>
 					<input type="text" class="form-control" id="insurer_id" name="insurer_id"  placeholder="Insurer Name"required></input>
 					<input type="hidden" name="kycExists" id="kycExists"></input>
-					<button type="button" class="btn btn-warning btn-lg trbtn" id="trigger_trade" data-toggle="modal" data-target="#">Trigger trade</button>
-				 <div class="upload_kyc" style="display:none;">
-					 <p><i class="fa fa-check-square-o" aria-hidden="true" id="kycVerified"></i> KYC Done</p>
-					 <p><i class="fa fa-check-square-o" aria-hidden="true" id="kycNotVerified"></i> KYC Not Verified</p>
-					 <button class="btn btn-warning btn-lg trbtn setbutton" type="submit" data-toggle="modal" data-target="#">Proceed</button>
-			 	</div>
 				</form>
+				<div class="upload_kyc" style="display:none;">
+					<p><i class="fa fa-check-square-o" aria-hidden="true" id="kycVerified"></i> KYC Done</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true" id="kycNotVerified"></i> KYC Not Verified</p>
+					<button class="btn btn-warning btn-lg trbtn setbutton" type="submit" data-toggle="modal" data-target="#" onclick="tradefun()">Proceed</button>
+			 </div>
+				<button class="btn btn-warning btn-lg trbtn" id="trigger_trade" data-toggle="modal" data-target="#">Trigger trade</button>
 			</div>
 		</div>
 	</div>
@@ -482,14 +482,14 @@ $(document).ready(function(){
 
 	function tradefun() {
 		var xhttp = new XMLHttpRequest();
-		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
+		var kycExists = encodeURIComponent(document.getElementById("kycExists").value);
+		var tradetype = encodeURIComponent(document.getElementById("tradetype").value);
 		var user = encodeURIComponent(document.getElementById("user").value);
 		var senderpage = encodeURIComponent(document.getElementById("senderpage").value);
 		var customer_id = encodeURIComponent(document.getElementById("customer_id").value);
-		var customer_id = encodeURIComponent(document.getElementById("customer_id").value);
-		var bank_id = encodeURIComponent(document.getElementById("bank_id").value);
-		var shipper_id = encodeURIComponent(document.getElementById("shipper_id").value);
-		var parameters = "bank_id=" + bank_id + "&user=" + user + "&senderpage=" + senderpage + "&customer_id=" + customer_id + "&customer_id=" + customer_id + "&bank_id=" + bank_id + "&shipper_id=" + shipper_id;
+		var dealer_id = encodeURIComponent(document.getElementById("dealer_id").value);
+		var aadhar_id = encodeURIComponent(document.getElementById("aadhar_id").value);
+		var parameters = "user=" + user + "&senderpage=" + senderpage + "&tradetype=" + tradetype + "&customer_id=" + customer_id + "&dealer_id=" + dealer_id;
 
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
@@ -506,7 +506,7 @@ $(document).ready(function(){
 					if(res.status == "Ethereum Transaction Pending!!! Check after 2 mins!!!"){
 						thead.innerHTML = '<tr><th>Tracking ID</th><th>Buyer</th><th>Seller</th><th>Date & Time</th><th>Trade Tracker</th></tr>';
 						tbody.innerHTML = '<tr><td style="display:none;">' + res.tradeID + '</td><td class="trackId">' + res.tradeID.slice(0,3) + '...' +  res.tradeID.slice(20,24) + "</td><td>" + res.buyer + "</td><td>" + res.seller + "</td><td>" + timestamp.slice(0, indx) + "</td>"+'<td><button href='+res.tradeID+' class="viewbtn" style="display: none;" onclick="getTradeDetails(this)"><img src="/images/View.png" class="viewimg" style="display: none;">View</button><img src="/images/loader.gif" style="display:block" class="loaderbtngif"></td></tr><hr style="margin:0px;width:350%"></tr>' + tbody.innerHTML;
-						tradefun2(res.tradeID, res.buyerHash, res.sellerHash, res.buyerBankHash, res.sellerBankHash, res.shipperHash);
+						tradefun2(res.tradeID, kycexists, res.tradetype, res.buyerHash, res.sellerHash, res.buyerBankHash, res.sellerBankHash, res.shipperHash);
 					}
 				}
 			}
@@ -516,9 +516,9 @@ $(document).ready(function(){
 		xhttp.send(parameters);
 	}
 
-	function tradefun2(tradeID, buyerHash, sellerHash, buyerBankHash, sellerBankHash, shipperHash){
+	function tradefun2(tradeID, kycexists, tradetype, buyerHash, sellerHash, buyerBankHash, sellerBankHash, shipperHash){
 		var xhttp = new XMLHttpRequest();
-		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&buyerHash=" + encodeURIComponent(buyerHash) + "&sellerHash=" + encodeURIComponent(sellerHash) + "&buyerBankHash=" + encodeURIComponent(buyerBankHash) + "&sellerBankHash=" + encodeURIComponent(sellerBankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
+		var parameters = "tradeID=" + encodeURIComponent(tradeID)+ "&tradetype=" + encodeURIComponent(tradetype) + "&kycexists=" + encodeURIComponent(kycexists) + "&buyerHash=" + encodeURIComponent(buyerHash) + "&sellerHash=" + encodeURIComponent(sellerHash) + "&buyerBankHash=" + encodeURIComponent(buyerBankHash) + "&sellerBankHash=" + encodeURIComponent(sellerBankHash) + "&shipperHash=" + encodeURIComponent(shipperHash);
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				location.reload();
