--- a/views/tradepage2.ejs
+++ b/views/tradepage2.ejs
@@ -25,6 +25,7 @@
 
 <form id="approval_form" action = "/approvetrade" method = "POST">
 		<input type="hidden" name="trade_id" value=<%= id %>>
+    <input type="hidden" name="userAddress" value=<%= userAddress %>>
 		<input type="hidden" class="approvaltype" name="approvaltype" value=''>
 		<input type="hidden" name="senderpage" value=<%= senderpage %>>
 	</form>
@@ -436,6 +437,7 @@
 						<form id="uploadform" action = "/uploadDoc" method = "POST" enctype = "multipart/form-data">
 							<div class="form-group">
 								<input type="hidden" id="docName" name="senderpage">
+                <input type="hidden" name="userAddress" value=<%= userAddress %>>
 								<p id="uperror" style="display:none;color:red;">Please Select File</p>
 								<input type="file" class="form-control" id="docfile" name="file" required>
 								<input type="hidden" name="id" value=<%= id %>>
@@ -468,6 +470,7 @@
             <div class="modal-body" style="padding-top:5px;">
                 <form id="rejection_form" action = "/rejecttrade" method = "POST">
                     <input type="hidden" name="trade_id" value=<%= id %>>
+                    <input type="hidden" name="userAddress" value=<%= userAddress %>>
                     <input type="hidden" class="approvaltype" name="approvaltype" value=''>
                     <input type="hidden" name="senderpage" value=<%= senderpage %>>
                 </form>
@@ -613,7 +616,7 @@ function computeHash(){
     $('#uplshow').show();
 }
 
-$(document).ready(function(){
+$(document).ready(function(){rejection_form
     $('[data-toggle="popover"]').popover();
 });
 
